# monbot

./: .dockerignore  .gitignore  Dockerfile  MATTERMOST_SETUP.md  compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
monbot/: __init__.py  bot.py  cache2.py  cli_dump_widgets.py  cli_gen_report.py  cli_graph_dump.py  cli_item_maintenance.py  cli_render_graph.py  config.py  db.py  downsample.py  graph_service.py  items_index.py  logging_conf.py  maintenance_service.py  mattermost_api.py  mattermost_bot.py  mattermost_db.py  mattermost_service.py  mattermost_setup.py  render.py  report_service.py  tg_media.py  utils.py  zabbix.py  zbx_data.py
monbot/handlers/: commands.py  common.py  consts.py  graphs.py  keyboards.py  maintenance.py  texts.py
