[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monbot"
version = "0.0.2"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
monbot-mm = "monbot.mattermost_bot:main"
monbot-mm-setup = "monbot.mattermost_setup:main"

[tool.setuptools.packages.find]
include = ["monbot*"]

[tool.isort]
profile = "black"
known_first_party = ["monbot"]
